--- a/src/kucharka.css
+++ b/src/kucharka.css
@@ -2,7 +2,9 @@
 html,body{font-family:"robotoregular",sans-serif;color:#000;background:#fff;margin:0;padding:0;text-align:center;margin:0;padding:0;}
 ul,li{margin:0;padding:0;}
 a{color:#000;font-weight:bold;}
-h1{font-size:1.6em;font-weight:bold;margin:0;color:#fff;padding:15px 0;margin:0;background-color:#000;text-align:center;}
+h1{font-size:1.6rem;font-weight:bold;margin:0;color:#fff;padding:0;margin:0;background-color:#000;text-align:center;position:relative;}
+h1 a{color:#fff;display:block;text-decoration:none;background:#000;padding:1rem;margin:0;}
+h1 img{position:absolute;right:0;top:0;padding:1.4rem 0.5rem;background:#000;}
 h2{margin:0 0.5rem;padding:1rem 0 0 0;}
 h3{margin:1em;}
 ul li a, ul li span{display:block;padding:1em 0;margin:0;width:100%;text-align:center;background:#eee;border-bottom:solid 1px #999;color:#000;text-decoration:none;font-weight:bold;}
@@ -10,6 +12,6 @@ p{text-align:left;padding:0 0.5rem;margin:1rem auto;font-size:1.2em;max-width:45
 .obrazek{max-width:45rem;padding:0;margin:0 auto;diplay:block;background:#eee;}
 .obrazek a{display:block;font-size:0;}
 .obrazek p{margin:0 0 1em 0;padding:0.5em;}
-.hlavicka{text-decoration:none;}
 .bookmark{background:url(star.svg) no-repeat 95% 50%;background-size:1em;}
 h2.bookmark{padding:0 2em;}
+#q{width:100%;margin:0;padding:0.5rem 0;border:0;font-size:1.6rem;border-bottom:solid #000 5px;}
