--- a/src/kucharka.css
+++ b/src/kucharka.css
@@ -15,6 +15,5 @@ p.c{text-align:center;}
 .obrazek p{margin:0 0 1em 0;padding:0.5em;}
 li.bookmark{background:url(star.svg) no-repeat 95% 50%;background-size:1em;}
 .bm{display:inline-block;}
-.bm:after{content:'';display:inline-block;width:2em;height: 1em;background:url(star.svg) no-repeat 50% 50%;background-size:1em;}
-h2.bookmark{padding:0 3em;max-width:45rem;text-align:center;margin:0 auto;background:url(star.svg) no-repeat 95% 50%;background-size:1em;}
+.bm:after, h2.bookmark:after{content:'';display:inline-block;width:2em;height: 1em;background:url(star.svg) no-repeat 50% 50%;background-size:1em;}
 #q{width:100%;margin:0;padding:0.5rem 0;border:0;font-size:1.6rem;border-bottom:solid #000 5px;}
