--- a/src/kucharka.css
+++ b/src/kucharka.css
@@ -10,6 +10,8 @@ h3{margin:1em;}
 ul li a, ul li span{display:block;padding:1em 0;margin:0;width:100%;text-align:center;background:#eee;border-bottom:solid 1px #999;color:#000;text-decoration:none;font-weight:bold;}
 p{text-align:left;padding:0 0.5rem;margin:1rem auto;font-size:1.2em;max-width:45rem;}
 p.c{text-align:center;}
+ol{text-align:left;}
+ol li{padding:0 2rem 0 0;margin:1rem auto;font-size:1.2em;max-width:45rem;}
 .obrazek{max-width:45rem;padding:0;margin:0 auto;diplay:block;background:#eee;}
 .obrazek a{display:block;font-size:0;}
 .obrazek p{margin:0 0 1em 0;padding:0.5em;}
