--- a/src/kucharka.css
+++ b/src/kucharka.css
@@ -2,6 +2,7 @@
 html,body{font-family:"robotoregular",sans-serif;color:#000;background:#fff;margin:0;padding:0;text-align:center;margin:0;padding:0;}
 ul,li{margin:0;padding:0;}
 a{color:#000;font-weight:bold;}
+a.mav{font-weight:normal;text-decoration:none;}
 h1{font-size:1.6rem;font-weight:bold;margin:0;color:#fff;padding:0;margin:0;background-color:#000;text-align:center;position:relative;}
 h1 a{color:#fff;display:block;text-decoration:none;background:#000;padding:1rem;margin:0;}
 h1 img{position:absolute;right:0;top:0;padding:1.4rem 0.5rem;background:#000;}
