--- a/src/kucharka.css
+++ b/src/kucharka.css
@@ -4,11 +4,11 @@ ul,li{margin:0;padding:0;}
 a{color:#000;font-weight:bold;}
 a.mav{font-weight:normal;text-decoration:none;}
 h1{font-size:1.6rem;font-weight:bold;margin:0;color:#fff;padding:0;margin:0;background-color:#000;text-align:center;position:relative;}
-h1 a{color:#fff;display:block;text-decoration:none;background:#000;padding:1rem;margin:0;}
+h1 a{color:#fff;display:block;text-decoration:none;background:#000;padding:1rem 3rem;margin:0;}
 h1 img{position:absolute;right:0;top:0;padding:1.4rem 0.5rem;background:#000;}
 h2{margin:0 0.5rem;padding:1rem 0 0 0;}
 h3{margin:1em;}
-ul li a, ul li span{display:block;padding:1em 0;margin:0;width:100%;text-align:center;background:#eee;border-bottom:solid 1px #999;color:#000;text-decoration:none;font-weight:bold;}
+ul li a{box-sizing:border-box;display:block;padding:1em;margin:0;width:100%;text-align:center;background:#eee;border-bottom:solid 1px #999;color:#000;text-decoration:none;font-weight:bold;}
 p{text-align:left;padding:0 0.5rem;margin:1rem auto;font-size:1.2em;max-width:45rem;}
 p.c{text-align:center;}
 ol{text-align:left;}
