--- a/src/kucharkadark.css
+++ b/src/kucharkadark.css
@@ -1,19 +1,19 @@
 @media all{
 @font-face{font-family:"robotoregular";src:url("roboto-regular.ttf") format("opentype");}
-html,body{font-family:"robotoregular",sans-serif;color:#000;background:#fff;margin:0;padding:0;text-align:center;margin:0;padding:0;}
-.knoflik{padding:1em 2em;}
+html,body{font-family:"robotoregular",sans-serif;color:#fff;background:#000;margin:0;padding:0;text-align:center;margin:0;padding:0;}
+.knoflik{background:#333;color:#fff;padding:1em 2em;}
 }
 
 @media screen{
 ul,li{margin:0;padding:0;}
-a{color:#000;font-weight:bold;}
+a{color:#fff;font-weight:bold;}
 a.mav{font-weight:normal;text-decoration:none;}
 h1{font-size:1.6rem;font-weight:bold;margin:0;color:#fff;padding:0;margin:0;background-color:#000;text-align:center;position:relative;}
-h1 a{color:#fff;display:block;text-decoration:none;background:#000;padding:1rem 3rem;margin:0;}
+h1 a{color:#fff;display:block;text-decoration:none;background:#000;padding:1rem 3rem;margin:0;border-bottom:solid 1px #999;}
 h1 img{position:absolute;right:0;top:0;padding:1.4rem 0.5rem;background:#000;}
-h2{margin:0 0.5rem;padding:1rem 0 0 0;}
-h3{margin:1em;}
-ul li a{box-sizing:border-box;display:block;padding:1em;margin:0;width:100%;text-align:center;background:#eee;border-bottom:solid 1px #999;color:#000;text-decoration:none;font-weight:bold;}
+h2{color:#fff;margin:0 0.5rem;padding:1rem 0 0 0;}
+h3{color:#fff;margin:1em;}
+ul li a{box-sizing:border-box;display:block;padding:1em;margin:0;width:100%;text-align:center;background:#000;border-bottom:solid 1px #999;color:#fff;text-decoration:none;font-weight:bold;}
 p{text-align:left;padding:0 0.5rem;margin:1rem auto;font-size:1.2em;max-width:45rem;}
 p.c{text-align:center;}
 ol{text-align:left;}
@@ -32,13 +32,13 @@ li.bookmark{background:url(star.svg) no-repeat 95% 50%;background-size:1em;}
 @media screen and (min-width: 30em){
 ul{display:flex;justify-content:start;flex-wrap:wrap;}
 ul li{flex: 0 0 50%;display:flex;justify-content:center;}
-ul li a{flex-grow:1;border-bottom:1px solid #999;border-right:1px solid #999;background:#eee;color:#000;display:flex;justify-content:center;align-items:center;padding:2rem 3rem;}
+ul li a{flex-grow:1;border-bottom:1px solid #999;border-right:1px solid #999;background:#000;color:#fff;display:flex;justify-content:center;align-items:center;padding:2rem 3rem;}
 ul li:nth-child(2n+2) a{border-right:0;}
 }
 
 @media screen and (min-width: 55em){
 ul li a{padding:2rem;}
-ul{background:#eee;}
+ul{background:#000;}
 ul li{flex: 0 0 25%;}
 ul li:nth-child(2n+2) a{border-right:1px solid #999;}
 ul li:nth-child(4n+4) a{border-right:0;}
