--- a/app/src/main/res/xml/config.xml
+++ b/app/src/main/res/xml/config.xml
@@ -1,13 +1,10 @@
 <?xml version='1.0' encoding='utf-8'?>
 <widget id="cz.kle.domacikucharka" version="1.0.0" xmlns="http://www.w3.org/ns/widgets" xmlns:cdv="http://cordova.apache.org/ns/1.0">
-    <feature name="Whitelist">
-        <param name="android-package" value="org.apache.cordova.whitelist.WhitelistPlugin" />
-        <param name="onload" value="true" />
-    </feature>
     <name>domacikucharka</name>
     <content src="index.html" />
     <preference name="loglevel" value="ERROR" />
-		<allow-intent href="https://*/*" />
-		<allow-intent href="http://*/*" />
-		<allow-intent href="mailto:*" />
+    <preference name="FullScreen" value="true" />
+    <allow-intent href="https://*/*" />
+    <allow-intent href="http://*/*" />
+    <allow-intent href="mailto:*" />
 </widget>
