--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<style name="DomaciKucharka" parent="@style/Theme.AppCompat.Light">
+<style name="DomaciKucharka" parent="Theme.AppCompat.Light.NoActionBar">
     <item name="android:windowBackground">@color/kucharka_bg</item>
     <item name="android:colorBackground">@color/kucharka_bg</item>
-		<item name="android:colorPrimary">@color/kucharka_header</item>
-		<item name="android:colorPrimaryDark">@color/kucharka_header</item>
-		<item name="android:navigationBarColor">@color/kucharka_header</item>
+    <item name="android:colorPrimary">@color/kucharka_header</item>
+    <item name="android:colorPrimaryDark">@color/kucharka_header</item>
+    <item name="android:navigationBarColor">@color/kucharka_header</item>
 </style>
 </resources>
