--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<style name="DomaciKucharka" parent="android:Theme.Light">
+<style name="DomaciKucharka" parent="Theme.AppCompat.Light.NoActionBar">
     <item name="android:windowBackground">@color/kucharka_bg</item>
     <item name="android:colorBackground">@color/kucharka_header</item>
 </style>
