--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<style name="DomaciKucharka" parent="Theme.AppCompat.Light.NoActionBar">
+<style name="Theme.App.SplashScreen" parent="Theme.SplashScreen.IconBackground">
     <item name="android:windowBackground">@color/kucharka_bg</item>
     <item name="android:colorBackground">@color/kucharka_header</item>
+    <item name="windowSplashScreenBackground">@color/kucharka_bg</item>
+    <item name="windowSplashScreenAnimatedIcon">@drawable/hrnec</item>
+    <item name="windowSplashScreenAnimationDuration">20</item>
+    <item name="postSplashScreenTheme">@style/Theme.AppCompat.NoActionBar</item>
 </style>
 </resources>
